--- a/gee_kmeans.ipynb
+++ b/gee_kmeans.ipynb
@@ -5,7 +5,7 @@
    "id": "8b66c518-a01d-42f0-b6d6-f3b3b6c0cbee",
    "metadata": {},
    "source": [
-    "# Assignment 2 - GEE Python API"
+    "# Unsupervised Machine Learning using GEE Python API + geemap Library"
    ]
   },
   {
